--- a/templates/list-collections.liquid
+++ b/templates/list-collections.liquid
@@ -1,8 +1,58 @@
-<div class="page-width">
-  <header class="section-header text-center">
-    <h1>{{ page_title }}tests</h1>
-  </header>
+<header class="inner-pages">
+  <div class="header-overlay">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="header-content">
+            <div class="header-content-inner">
+              <!-- <h1>New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything else!</h1> -->
+              <!-- <a href="#download" class="btn btn-outline btn-xl page-scroll">Start Now for Free!</a> -->
+              <h1>Menu</h1>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
 
+<section class="inner-page-section">
+  <div class="container">
+    <div class="col-md-5">
+      <img src="img/wings.jpg" >
+    </div>
+    <div class="col-md-7">
+      <div class="inner-box">
+        <h2>Our Main</h2>
+        <p>FRIED CHICKEN - - - <span>P150.00</span></p>
+        <p>CHICKEN WINGS - - - <span>P150.00</span></p>
+        <p>BBQ (PORK) - - - <span>P150.00</span></p>
+
+      </div>
+    </div>
+
+  </div>
+</section>
+
+<section class="inner-page-section">
+  <div class="container">
+
+    <div class="col-md-7">
+      <div class="inner-box">
+        <h2>Sides</h2>
+        <p>FRENCH FRIES - - - <span>P30.00</span></p>
+        <p>RICE - - - <span>P15.00</span></p>
+        <p>CEASARS SALAD (PORK, BEEF & CHICKEN) - - - <span>P150.00</span></p>
+      </div>
+    </div>
+    <div class="col-md-5">
+      <img src="img/fries.jpeg" style="float:right">
+    </div>
+
+  </div>
+</section>
+
+<div class="page-width">
   <div class="grid grid--uniform">
     {% for collection in collections %}
       <div class="grid__item small--one-half medium-up--one-third">
