--- a/templates/list-collections.liquid
+++ b/templates/list-collections.liquid
@@ -24,10 +24,12 @@
     <div class="col-md-7">
       <div class="inner-box">
         <h2>Our Main</h2>
-        <p>FRIED CHICKEN - - - <span>P150.00</span></p>
-        <p>CHICKEN WINGS - - - <span>P150.00</span></p>
-        <p>BBQ (PORK) - - - <span>P150.00</span></p>
+        {% if collections['main-menu'].products.size > 0 %}
+        {% for product in collections['main-menu'].products %}
+          <a class="shop-now" href="{{ product.url }}"><p>{{ product.title | escape  }} - - - <span>{{ product.price }}</span></p></a>
+        {% endfor %}
 
+        {% endif %}
       </div>
     </div>
 
