--- a/assets/resto.css
+++ b/assets/resto.css
@@ -266,6 +266,7 @@ header .device-container .screen img {
 @media (min-width: 992px) {
   header .header-content .header-content-inner h1 {
     font-size: 50px;
+    font-weight: 300;
   }
 }
 .inner-page-section{
