--- a/templates/product-template.liquid
+++ b/templates/product-template.liquid
@@ -193,7 +193,7 @@
   </script>
 {% endunless %}
 
-{% schema %}
+<!-- {% schema %}
   {
     "name": "Product pages",
     "settings": [
@@ -253,4 +253,4 @@
       }
     ]
   }
-{% endschema %}
+{% endschema %} -->
