--- a/templates/product-template.liquid
+++ b/templates/product-template.liquid
@@ -99,7 +99,7 @@
     <div class="grid__item {{ product_description_width }}">
       <div class="product-single__meta">
 
-        <h1 itemprop="name" class="product-single__title">{{ product.title }}</h1>
+        <h1 itemprop="name" class="product-single__title">{{ product.title }} Test</h1>
 
         {% if section.settings.show_vendor %}
         <p itemprop="brand" class="product-single__vendor">{{ product.vendor }}</p>
