--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -15,8 +15,8 @@
     </div>
   </div>
 </header>
-
-<div class="product-template__container page-width col-md-12" itemscope itemtype="http://schema.org/Product" id="ProductSection-{{ section.id }}" data-section-id="{{ section.id }}" data-section-type="product" data-enable-history-state="true">
+<div class="col-md-12">
+<div class="product-template__container page-width" itemscope itemtype="http://schema.org/Product" id="ProductSection-{{ section.id }}" data-section-id="{{ section.id }}" data-section-type="product" data-enable-history-state="true">
   <meta itemprop="name" content="{{ product.title }}">
   <meta itemprop="url" content="{{ shop.url }}{{ product.url }}">
   <meta itemprop="image" content="{{ product.featured_image.src | img_url: '800x' }}">
@@ -194,6 +194,9 @@
       </div>
     </div>
   </div>
+</div>
+
+</div>
 </div>
 
 {% if collection %}
