--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -7,7 +7,7 @@
             <div class="header-content-inner">
               <!-- <h1>New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything else!</h1> -->
               <!-- <a href="#download" class="btn btn-outline btn-xl page-scroll">Start Now for Free!</a> -->
-              <h1>Menu</h1>
+              <h1>{{ product.title }}</h1>
             </div>
           </div>
         </div>
@@ -15,7 +15,7 @@
     </div>
   </div>
 </header>
-<div class="col-md-12 product-template-page"> 
+<div class="col-md-12 product-template-page">
 <div class="product-template__container page-width" itemscope itemtype="http://schema.org/Product" id="ProductSection-{{ section.id }}" data-section-id="{{ section.id }}" data-section-type="product" data-enable-history-state="true">
   <meta itemprop="name" content="{{ product.title }}">
   <meta itemprop="url" content="{{ shop.url }}{{ product.url }}">
