--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -6,7 +6,7 @@
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
       </button>
-      <a class="navbar-brand page-scroll" href="">Fun Bites</a>
+      <a class="navbar-brand page-scroll" href="/">Fun Bites</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -16,10 +16,10 @@
           <a class="page-scroll" href="#download">Order</a>
         </li>
         <li>
-          <a class="page-scroll" href="collections">Menu</a>
+          <a class="page-scroll" href="/collections">Menu</a>
         </li>
         <li>
-          <a class="page-scroll" href="pages/about-us">About</a>
+          <a class="page-scroll" href="/pages/about-us">About</a>
         </li>
         <li>
           <a class="page-scroll" href="#contact">Contact</a>
